# cnp-plum-fastapi-backend

./: Dockerfile  Jenkinsfile_CNP  Jenkinsfile_nightly  Jenkinsfile_parameterized  README.md  alembic.ini  catalog-info.yaml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  renovate.json
.github/workflows/: ci.yml  codeql.yml
app/: azure_auth.py  database.py  http_client.py  main.py  models.py
app/routers/: chat.py  health.py  info.py  recipes.py  root.py
charts/plum-fastapi-backend/: Chart.yaml
migrations/: env.py
migrations/versions/: a8dbb031b86c_seed_python_recipe.py
tests/unit/: test_azure_auth.py  test_chat.py  test_database.py  test_health.py  test_info.py  test_models.py  test_recipes.py  test_root.py
